# django-es

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
api/: auth.py  serializers.py  tasks.py  tests.py  urls.py
api/management/commands/: create_beat_task.py  create_test_user.py  init_mock_elastic_data.py
api/mixins/: auth.py  view_validation.py
api/views/: __init__.py  auth.py  search.py  status.py
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py
es/: es_base.py  hostname_ip.py  schemas.py
